2007-11-20  Dick Porter  <dick@ximian.com>

	* src/gstr.c: Implement g_strsplit_set() and re-implement
	g_strsplit() so it passes the additional tests. (g_strsplit()
	should treat multi-char delimiters as just a single token, rather
	than a set of delimiters.)

	* src/gslist.c: Implement g_slist_index(), g_slist_nth() and
	g_slist_nth_data().

	* test/string-util.c: Test g_strsplit_set() and more tests for
	g_strsplit().

	* test/slist.c: Test g_slist_nth() and
	g_slist_index().

2007-11-06  Geoff Norton  <gnorton@novell.com>

	* configure.ac: Check for libiconv_open as the previous check was failing against 
	some versions of libiconv.

2007-11-06  Andreas Faerber  <andreas.faerber@web.de>

	* test/Makefile.am: Fix noinst_PROGRAMS for automake 1.6.3
	                    Add support for VPATH

2007-11-06  Geoff Norton  <gnorton@novell.com>

	* configure.ac: Determing if glib-2.0 is installed and set HAVE_GLIB appropriately
	* test/Makefile.am: Only build test-glib if glib-2.0 is available

2007-11-05  Geoff Norton  <gnorton@novell.com>

	* configure.ac: Check for getpwent_r and wether libiconv is needed to be linked.
	Also look to see if we can use export-dynamic in the test suite.
	* test/Makefile.am: Get LDFLAGS from configure instead of setting them.
	* src/gerror.c: Implement g_clear_error.
	* src/glib.h: Only use the format, ... convention is HAVE_C99_SUPPORT is available.
	* src/gpath.c: Only use the getpwent_r codepath if getpwent_r is available.
	* src/gspawn.c: Define environ to call _NSGetEnviron() on Apple.
	* src/Makefile.am: Remove -Werror so we dont fail on different function declarations.
		Portions of all of the above are from Andreas Faerber & Jonathan Chambers
	
2007-10-31  Jonathan Chambers <joncham@gmail.com>
	
	* src/ghashtable.c: Add g_hash_table_foreach_steal.
	* src/garray.c: Add g_array_remove_index_fast.
	* src/gpath.c (g_path_is_absolute): Handle windows paths.
	* src/glib.h: Add g_hash_table_foreach_steal and g_array_remove_index_fast
	